// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser Golden Test Suite Parse example "bool1": bool1 1`] = `
Object {
  "term": Object {
    "ann": Object {
      "span": Object {
        "column": Object {
          "end": 5,
          "start": 1,
        },
        "line": Object {
          "end": 1,
          "start": 1,
        },
        "type": "Span",
      },
    },
    "tag": "ValueTerm",
    "value": Object {
      "ann": Object {
        "span": Object {
          "column": Object {
            "end": 5,
            "start": 1,
          },
          "line": Object {
            "end": 1,
            "start": 1,
          },
          "type": "Span",
        },
      },
      "bool": true,
      "tag": "BooleanValue",
    },
  },
  "warnings": Array [
    [Error: Ambiguous grammar encountered! Resolving first result.],
  ],
}
`;

exports[`Parser Golden Test Suite Parse example "bool2": bool2 1`] = `
Object {
  "term": Object {
    "ann": Object {
      "span": Object {
        "column": Object {
          "end": 6,
          "start": 1,
        },
        "line": Object {
          "end": 1,
          "start": 1,
        },
        "type": "Span",
      },
    },
    "tag": "ValueTerm",
    "value": Object {
      "ann": Object {
        "span": Object {
          "column": Object {
            "end": 6,
            "start": 1,
          },
          "line": Object {
            "end": 1,
            "start": 1,
          },
          "type": "Span",
        },
      },
      "bool": false,
      "tag": "BooleanValue",
    },
  },
  "warnings": Array [
    [Error: Ambiguous grammar encountered! Resolving first result.],
  ],
}
`;

exports[`Parser Golden Test Suite Parse example "call1": call1 1`] = `
Object {
  "term": Object {
    "ann": Object {
      "span": Object {
        "column": Object {
          "end": 25,
          "start": 1,
        },
        "line": Object {
          "end": 1,
          "start": 1,
        },
        "type": "Span",
      },
    },
    "body": Object {
      "ann": Object {
        "span": Object {
          "column": Object {
            "end": 25,
            "start": 21,
          },
          "line": Object {
            "end": 1,
            "start": 1,
          },
          "type": "Span",
        },
      },
      "args": Array [
        Object {
          "ann": Object {
            "span": Object {
              "column": Object {
                "end": 24,
                "start": 23,
              },
              "line": Object {
                "end": 1,
                "start": 1,
              },
              "type": "Span",
            },
          },
          "tag": "ValueTerm",
          "value": Object {
            "ann": Object {
              "span": Object {
                "column": Object {
                  "end": 24,
                  "start": 23,
                },
                "line": Object {
                  "end": 1,
                  "start": 1,
                },
                "type": "Span",
              },
            },
            "num": 1,
            "tag": "NumberValue",
          },
        },
      ],
      "func": Object {
        "ann": Object {
          "span": Object {
            "column": Object {
              "end": 22,
              "start": 21,
            },
            "line": Object {
              "end": 1,
              "start": 1,
            },
            "type": "Span",
          },
        },
        "tag": "VariableTerm",
        "variable": "f",
      },
      "tag": "CallTerm",
    },
    "declarations": Array [
      Object {
        "ann": Object {
          "span": Object {
            "column": Object {
              "end": 17,
              "start": 5,
            },
            "line": Object {
              "end": 1,
              "start": 1,
            },
            "type": "Span",
          },
        },
        "body": Object {
          "ann": Object {
            "span": Object {
              "column": Object {
                "end": 17,
                "start": 9,
              },
              "line": Object {
                "end": 1,
                "start": 1,
              },
              "type": "Span",
            },
          },
          "args": Array [
            "x",
          ],
          "body": Object {
            "ann": Object {
              "span": Object {
                "column": Object {
                  "end": 17,
                  "start": 16,
                },
                "line": Object {
                  "end": 1,
                  "start": 1,
                },
                "type": "Span",
              },
            },
            "tag": "VariableTerm",
            "variable": "x",
          },
          "tag": "LambdaTerm",
        },
        "tag": "VariableDeclaration",
        "variable": "f",
      },
    ],
    "tag": "LetTerm",
  },
  "warnings": Array [],
}
`;

exports[`Parser Golden Test Suite Parse example "example1": example1 1`] = `
Object {
  "term": Object {
    "ann": Object {
      "span": Object {
        "column": Object {
          "end": 2,
          "start": 1,
        },
        "line": Object {
          "end": 15,
          "start": 2,
        },
        "type": "Span",
      },
    },
    "body": Object {
      "ann": Object {
        "span": Object {
          "column": Object {
            "end": 2,
            "start": 4,
          },
          "line": Object {
            "end": 15,
            "start": 10,
          },
          "type": "Span",
        },
      },
      "block": Object {
        "ann": Object {
          "span": Object {
            "column": Object {
              "end": 2,
              "start": 7,
            },
            "line": Object {
              "end": 15,
              "start": 10,
            },
            "type": "Span",
          },
        },
        "statements": Array [
          Object {
            "ann": Object {
              "span": Object {
                "column": Object {
                  "end": 16,
                  "start": 3,
                },
                "line": Object {
                  "end": 11,
                  "start": 11,
                },
                "type": "Span",
              },
            },
            "lhs": "baz",
            "rhs": Object {
              "ann": Object {
                "span": Object {
                  "column": Object {
                    "end": 16,
                    "start": 9,
                  },
                  "line": Object {
                    "end": 11,
                    "start": 11,
                  },
                  "type": "Span",
                },
              },
              "args": Array [
                Object {
                  "ann": Object {
                    "span": Object {
                      "column": Object {
                        "end": 15,
                        "start": 12,
                      },
                      "line": Object {
                        "end": 11,
                        "start": 11,
                      },
                      "type": "Span",
                    },
                  },
                  "tag": "VariableTerm",
                  "variable": "bar",
                },
              ],
              "func": Object {
                "ann": Object {
                  "span": Object {
                    "column": Object {
                      "end": 11,
                      "start": 9,
                    },
                    "line": Object {
                      "end": 11,
                      "start": 11,
                    },
                    "type": "Span",
                  },
                },
                "tag": "VariableTerm",
                "variable": "id",
              },
              "tag": "CallTerm",
            },
            "tag": "AssignmentStatement",
          },
          Object {
            "ann": Object {
              "span": Object {
                "column": Object {
                  "end": 21,
                  "start": 3,
                },
                "line": Object {
                  "end": 12,
                  "start": 12,
                },
                "type": "Span",
              },
            },
            "args": Array [
              Object {
                "ann": Object {
                  "span": Object {
                    "column": Object {
                      "end": 15,
                      "start": 12,
                    },
                    "line": Object {
                      "end": 12,
                      "start": 12,
                    },
                    "type": "Span",
                  },
                },
                "tag": "VariableTerm",
                "variable": "baz",
              },
              Object {
                "ann": Object {
                  "span": Object {
                    "column": Object {
                      "end": 20,
                      "start": 17,
                    },
                    "line": Object {
                      "end": 12,
                      "start": 12,
                    },
                    "type": "Span",
                  },
                },
                "tag": "VariableTerm",
                "variable": "bar",
              },
            ],
            "func": Object {
              "ann": Object {
                "span": Object {
                  "column": Object {
                    "end": 11,
                    "start": 3,
                  },
                  "line": Object {
                    "end": 12,
                    "start": 12,
                  },
                  "type": "Span",
                },
              },
              "tag": "VariableTerm",
              "variable": "constant",
            },
            "tag": "CallStatement",
          },
          Object {
            "ann": Object {
              "span": Object {
                "column": Object {
                  "end": 35,
                  "start": 3,
                },
                "line": Object {
                  "end": 13,
                  "start": 13,
                },
                "type": "Span",
              },
            },
            "lhs": "clientName",
            "rhs": Object {
              "ann": Object {
                "span": Object {
                  "column": Object {
                    "end": 35,
                    "start": 16,
                  },
                  "line": Object {
                    "end": 13,
                    "start": 13,
                  },
                  "type": "Span",
                },
              },
              "member": "name",
              "object": Object {
                "ann": Object {
                  "span": Object {
                    "column": Object {
                      "end": 30,
                      "start": 16,
                    },
                    "line": Object {
                      "end": 13,
                      "start": 13,
                    },
                    "type": "Span",
                  },
                },
                "args": Array [
                  Object {
                    "ann": Object {
                      "span": Object {
                        "column": Object {
                          "end": 29,
                          "start": 26,
                        },
                        "line": Object {
                          "end": 13,
                          "start": 13,
                        },
                        "type": "Span",
                      },
                    },
                    "tag": "VariableTerm",
                    "variable": "baz",
                  },
                ],
                "func": Object {
                  "ann": Object {
                    "span": Object {
                      "column": Object {
                        "end": 25,
                        "start": 16,
                      },
                      "line": Object {
                        "end": 13,
                        "start": 13,
                      },
                      "type": "Span",
                    },
                  },
                  "tag": "VariableTerm",
                  "variable": "createFoo",
                },
                "tag": "CallTerm",
              },
              "tag": "MemberAccessTerm",
            },
            "tag": "AssignmentStatement",
          },
          Object {
            "ann": Object {
              "span": Object {
                "column": Object {
                  "end": 20,
                  "start": 3,
                },
                "line": Object {
                  "end": 14,
                  "start": 14,
                },
                "type": "Span",
              },
            },
            "result": Object {
              "ann": Object {
                "span": Object {
                  "column": Object {
                    "end": 20,
                    "start": 10,
                  },
                  "line": Object {
                    "end": 14,
                    "start": 14,
                  },
                  "type": "Span",
                },
              },
              "tag": "VariableTerm",
              "variable": "clientName",
            },
            "tag": "ReturnStatement",
          },
        ],
        "tag": "BlockStatement",
      },
      "tag": "DoTerm",
    },
    "declarations": Array [
      Object {
        "ann": Object {
          "span": Object {
            "column": Object {
              "end": 16,
              "start": 3,
            },
            "line": Object {
              "end": 3,
              "start": 3,
            },
            "type": "Span",
          },
        },
        "body": Object {
          "ann": Object {
            "span": Object {
              "column": Object {
                "end": 16,
                "start": 8,
              },
              "line": Object {
                "end": 3,
                "start": 3,
              },
              "type": "Span",
            },
          },
          "args": Array [
            "x",
          ],
          "body": Object {
            "ann": Object {
              "span": Object {
                "column": Object {
                  "end": 16,
                  "start": 15,
                },
                "line": Object {
                  "end": 3,
                  "start": 3,
                },
                "type": "Span",
              },
            },
            "tag": "VariableTerm",
            "variable": "x",
          },
          "tag": "LambdaTerm",
        },
        "tag": "VariableDeclaration",
        "variable": "id",
      },
      Object {
        "ann": Object {
          "span": Object {
            "column": Object {
              "end": 25,
              "start": 3,
            },
            "line": Object {
              "end": 4,
              "start": 4,
            },
            "type": "Span",
          },
        },
        "body": Object {
          "ann": Object {
            "span": Object {
              "column": Object {
                "end": 25,
                "start": 14,
              },
              "line": Object {
                "end": 4,
                "start": 4,
              },
              "type": "Span",
            },
          },
          "args": Array [
            "a",
            "b",
          ],
          "body": Object {
            "ann": Object {
              "span": Object {
                "column": Object {
                  "end": 25,
                  "start": 24,
                },
                "line": Object {
                  "end": 4,
                  "start": 4,
                },
                "type": "Span",
              },
            },
            "tag": "VariableTerm",
            "variable": "a",
          },
          "tag": "LambdaTerm",
        },
        "tag": "VariableDeclaration",
        "variable": "constant",
      },
      Object {
        "ann": Object {
          "span": Object {
            "column": Object {
              "end": 4,
              "start": 3,
            },
            "line": Object {
              "end": 8,
              "start": 5,
            },
            "type": "Span",
          },
        },
        "body": Object {
          "ann": Object {
            "span": Object {
              "column": Object {
                "end": 4,
                "start": 15,
              },
              "line": Object {
                "end": 8,
                "start": 5,
              },
              "type": "Span",
            },
          },
          "args": Array [
            "x",
          ],
          "body": Object {
            "ann": Object {
              "span": Object {
                "column": Object {
                  "end": 4,
                  "start": 22,
                },
                "line": Object {
                  "end": 8,
                  "start": 5,
                },
                "type": "Span",
              },
            },
            "entries": Object {
              "name": Object {
                "ann": Object {
                  "span": Object {
                    "column": Object {
                      "end": 41,
                      "start": 11,
                    },
                    "line": Object {
                      "end": 6,
                      "start": 6,
                    },
                    "type": "Span",
                  },
                },
                "elements": Array [
                  Object {
                    "ann": Object {
                      "span": Object {
                        "column": Object {
                          "end": 15,
                          "start": 12,
                        },
                        "line": Object {
                          "end": 6,
                          "start": 6,
                        },
                        "type": "Span",
                      },
                    },
                    "tag": "ValueTerm",
                    "value": Object {
                      "ann": Object {
                        "span": Object {
                          "column": Object {
                            "end": 15,
                            "start": 12,
                          },
                          "line": Object {
                            "end": 6,
                            "start": 6,
                          },
                          "type": "Span",
                        },
                      },
                      "str": "F",
                      "tag": "StringValue",
                    },
                  },
                  Object {
                    "ann": Object {
                      "span": Object {
                        "column": Object {
                          "end": 20,
                          "start": 17,
                        },
                        "line": Object {
                          "end": 6,
                          "start": 6,
                        },
                        "type": "Span",
                      },
                    },
                    "tag": "ValueTerm",
                    "value": Object {
                      "ann": Object {
                        "span": Object {
                          "column": Object {
                            "end": 20,
                            "start": 17,
                          },
                          "line": Object {
                            "end": 6,
                            "start": 6,
                          },
                          "type": "Span",
                        },
                      },
                      "str": "o",
                      "tag": "StringValue",
                    },
                  },
                  Object {
                    "ann": Object {
                      "span": Object {
                        "column": Object {
                          "end": 25,
                          "start": 22,
                        },
                        "line": Object {
                          "end": 6,
                          "start": 6,
                        },
                        "type": "Span",
                      },
                    },
                    "tag": "ValueTerm",
                    "value": Object {
                      "ann": Object {
                        "span": Object {
                          "column": Object {
                            "end": 25,
                            "start": 22,
                          },
                          "line": Object {
                            "end": 6,
                            "start": 6,
                          },
                          "type": "Span",
                        },
                      },
                      "str": "o",
                      "tag": "StringValue",
                    },
                  },
                  Object {
                    "ann": Object {
                      "span": Object {
                        "column": Object {
                          "end": 30,
                          "start": 27,
                        },
                        "line": Object {
                          "end": 6,
                          "start": 6,
                        },
                        "type": "Span",
                      },
                    },
                    "tag": "ValueTerm",
                    "value": Object {
                      "ann": Object {
                        "span": Object {
                          "column": Object {
                            "end": 30,
                            "start": 27,
                          },
                          "line": Object {
                            "end": 6,
                            "start": 6,
                          },
                          "type": "Span",
                        },
                      },
                      "str": "b",
                      "tag": "StringValue",
                    },
                  },
                  Object {
                    "ann": Object {
                      "span": Object {
                        "column": Object {
                          "end": 35,
                          "start": 32,
                        },
                        "line": Object {
                          "end": 6,
                          "start": 6,
                        },
                        "type": "Span",
                      },
                    },
                    "tag": "ValueTerm",
                    "value": Object {
                      "ann": Object {
                        "span": Object {
                          "column": Object {
                            "end": 35,
                            "start": 32,
                          },
                          "line": Object {
                            "end": 6,
                            "start": 6,
                          },
                          "type": "Span",
                        },
                      },
                      "str": "a",
                      "tag": "StringValue",
                    },
                  },
                  Object {
                    "ann": Object {
                      "span": Object {
                        "column": Object {
                          "end": 40,
                          "start": 37,
                        },
                        "line": Object {
                          "end": 6,
                          "start": 6,
                        },
                        "type": "Span",
                      },
                    },
                    "tag": "ValueTerm",
                    "value": Object {
                      "ann": Object {
                        "span": Object {
                          "column": Object {
                            "end": 40,
                            "start": 37,
                          },
                          "line": Object {
                            "end": 6,
                            "start": 6,
                          },
                          "type": "Span",
                        },
                      },
                      "str": "r",
                      "tag": "StringValue",
                    },
                  },
                ],
                "tag": "ArrayTerm",
              },
              "value": Object {
                "ann": Object {
                  "span": Object {
                    "column": Object {
                      "end": 13,
                      "start": 12,
                    },
                    "line": Object {
                      "end": 7,
                      "start": 7,
                    },
                    "type": "Span",
                  },
                },
                "tag": "VariableTerm",
                "variable": "x",
              },
            },
            "tag": "ObjectTerm",
          },
          "tag": "LambdaTerm",
        },
        "tag": "VariableDeclaration",
        "variable": "createFoo",
      },
      Object {
        "ann": Object {
          "span": Object {
            "column": Object {
              "end": 12,
              "start": 3,
            },
            "line": Object {
              "end": 9,
              "start": 9,
            },
            "type": "Span",
          },
        },
        "body": Object {
          "ann": Object {
            "span": Object {
              "column": Object {
                "end": 12,
                "start": 9,
              },
              "line": Object {
                "end": 9,
                "start": 9,
              },
              "type": "Span",
            },
          },
          "tag": "ValueTerm",
          "value": Object {
            "ann": Object {
              "span": Object {
                "column": Object {
                  "end": 12,
                  "start": 9,
                },
                "line": Object {
                  "end": 9,
                  "start": 9,
                },
                "type": "Span",
              },
            },
            "num": 999,
            "tag": "NumberValue",
          },
        },
        "tag": "VariableDeclaration",
        "variable": "bar",
      },
    ],
    "tag": "LetTerm",
  },
  "warnings": Array [
    [Error: Ambiguous grammar encountered! Resolving first result.],
  ],
}
`;

exports[`Parser Golden Test Suite Parse example "example2": example2 1`] = `
Object {
  "errors": Array [
    [Error: Parser failed! Error message: Syntax error at line 12 col 18:

      j = s.length -
                   ^
Unexpected keyword token: "-". Instead, I was expecting to see one of the following:

A ";" based on:
    statement_list_tail → _ ● ";" _ statement
    statement_list$ebnf$1 → statement_list$ebnf$1 ● statement_list_tail
    statement_list → statement ● statement_list$ebnf$1
    block_statement$ebnf$1 →  ● statement_list
    block_statement → "{" _ ● block_statement$ebnf$1 _ block_statement$ebnf$2 "}"
    do_term → "do" _ ● block_statement
    cterm →  ● do_term
    term →  ● cterm
    lambda_term → "(" _ lambda_arguments _ lambda_term$ebnf$1 ")" _ "=>" _ ● term
    cterm →  ● lambda_term
    term →  ● cterm
    variable_declaration → identifier_token _ "=" _ ● term
    declaration →  ● variable_declaration
    let_declarations_tail → _ ";" _ ● declaration
    let_declarations$ebnf$1 → let_declarations$ebnf$1 ● let_declarations_tail
    let_declarations → declaration ● let_declarations$ebnf$1
    let_term → "let" _ ● let_declarations _ let_term$ebnf$1 "in" _ term
    cterm →  ● let_term
    term →  ● cterm
    file → _ ● term _
    main →  ● file
A newline token based on:
    _ → _ ● %newline _
    index_access_term → bterm ● _ "[" _ bterm _ "]"
    bterm →  ● index_access_term
    cterm →  ● bterm
    term →  ● cterm
    assignment_statement → identifier_token _ "=" _ ● term
    statement →  ● assignment_statement
    statement_list_tail → _ ";" _ ● statement
    statement_list$ebnf$1 → statement_list$ebnf$1 ● statement_list_tail
    statement_list → statement ● statement_list$ebnf$1
    block_statement$ebnf$1 →  ● statement_list
    block_statement → "{" _ ● block_statement$ebnf$1 _ block_statement$ebnf$2 "}"
    do_term → "do" _ ● block_statement
    cterm →  ● do_term
    term →  ● cterm
    lambda_term → "(" _ lambda_arguments _ lambda_term$ebnf$1 ")" _ "=>" _ ● term
    cterm →  ● lambda_term
    term →  ● cterm
    variable_declaration → identifier_token _ "=" _ ● term
    declaration →  ● variable_declaration
    let_declarations_tail → _ ";" _ ● declaration
    let_declarations$ebnf$1 → let_declarations$ebnf$1 ● let_declarations_tail
    let_declarations → declaration ● let_declarations$ebnf$1
    let_term → "let" _ ● let_declarations _ let_term$ebnf$1 "in" _ term
    cterm →  ● let_term
    term →  ● cterm
    file → _ ● term _
    main →  ● file
A comment token based on:
    _ → _ ● %comment _
    index_access_term → bterm ● _ "[" _ bterm _ "]"
    bterm →  ● index_access_term
    cterm →  ● bterm
    term →  ● cterm
    assignment_statement → identifier_token _ "=" _ ● term
    statement →  ● assignment_statement
    statement_list_tail → _ ";" _ ● statement
    statement_list$ebnf$1 → statement_list$ebnf$1 ● statement_list_tail
    statement_list → statement ● statement_list$ebnf$1
    block_statement$ebnf$1 →  ● statement_list
    block_statement → "{" _ ● block_statement$ebnf$1 _ block_statement$ebnf$2 "}"
    do_term → "do" _ ● block_statement
    cterm →  ● do_term
    term →  ● cterm
    lambda_term → "(" _ lambda_arguments _ lambda_term$ebnf$1 ")" _ "=>" _ ● term
    cterm →  ● lambda_term
    term →  ● cterm
    variable_declaration → identifier_token _ "=" _ ● term
    declaration →  ● variable_declaration
    let_declarations_tail → _ ";" _ ● declaration
    let_declarations$ebnf$1 → let_declarations$ebnf$1 ● let_declarations_tail
    let_declarations → declaration ● let_declarations$ebnf$1
    let_term → "let" _ ● let_declarations _ let_term$ebnf$1 "in" _ term
    cterm →  ● let_term
    term →  ● cterm
    file → _ ● term _
    main →  ● file
A "(" based on:
    call_term → bterm _ ● "(" _ call_arguments _ call_term$ebnf$1 ")"
    bterm →  ● call_term
    cterm →  ● bterm
    term →  ● cterm
    assignment_statement → identifier_token _ "=" _ ● term
    statement →  ● assignment_statement
    statement_list_tail → _ ";" _ ● statement
    statement_list$ebnf$1 → statement_list$ebnf$1 ● statement_list_tail
    statement_list → statement ● statement_list$ebnf$1
    block_statement$ebnf$1 →  ● statement_list
    block_statement → "{" _ ● block_statement$ebnf$1 _ block_statement$ebnf$2 "}"
    do_term → "do" _ ● block_statement
    cterm →  ● do_term
    term →  ● cterm
    lambda_term → "(" _ lambda_arguments _ lambda_term$ebnf$1 ")" _ "=>" _ ● term
    cterm →  ● lambda_term
    term →  ● cterm
    variable_declaration → identifier_token _ "=" _ ● term
    declaration →  ● variable_declaration
    let_declarations_tail → _ ";" _ ● declaration
    let_declarations$ebnf$1 → let_declarations$ebnf$1 ● let_declarations_tail
    let_declarations → declaration ● let_declarations$ebnf$1
    let_term → "let" _ ● let_declarations _ let_term$ebnf$1 "in" _ term
    cterm →  ● let_term
    term →  ● cterm
    file → _ ● term _
    main →  ● file
A "." based on:
    member_access_term → bterm _ ● "." _ identifier_token
    bterm →  ● member_access_term
    cterm →  ● bterm
    term →  ● cterm
    assignment_statement → identifier_token _ "=" _ ● term
    statement →  ● assignment_statement
    statement_list_tail → _ ";" _ ● statement
    statement_list$ebnf$1 → statement_list$ebnf$1 ● statement_list_tail
    statement_list → statement ● statement_list$ebnf$1
    block_statement$ebnf$1 →  ● statement_list
    block_statement → "{" _ ● block_statement$ebnf$1 _ block_statement$ebnf$2 "}"
    do_term → "do" _ ● block_statement
    cterm →  ● do_term
    term →  ● cterm
    lambda_term → "(" _ lambda_arguments _ lambda_term$ebnf$1 ")" _ "=>" _ ● term
    cterm →  ● lambda_term
    term →  ● cterm
    variable_declaration → identifier_token _ "=" _ ● term
    declaration →  ● variable_declaration
    let_declarations_tail → _ ";" _ ● declaration
    let_declarations$ebnf$1 → let_declarations$ebnf$1 ● let_declarations_tail
    let_declarations → declaration ● let_declarations$ebnf$1
    let_term → "let" _ ● let_declarations _ let_term$ebnf$1 "in" _ term
    cterm →  ● let_term
    term →  ● cterm
    file → _ ● term _
    main →  ● file
A "[" based on:
    index_access_term → bterm _ ● "[" _ bterm _ "]"
    bterm →  ● index_access_term
    cterm →  ● bterm
    term →  ● cterm
    assignment_statement → identifier_token _ "=" _ ● term
    statement →  ● assignment_statement
    statement_list_tail → _ ";" _ ● statement
    statement_list$ebnf$1 → statement_list$ebnf$1 ● statement_list_tail
    statement_list → statement ● statement_list$ebnf$1
    block_statement$ebnf$1 →  ● statement_list
    block_statement → "{" _ ● block_statement$ebnf$1 _ block_statement$ebnf$2 "}"
    do_term → "do" _ ● block_statement
    cterm →  ● do_term
    term →  ● cterm
    lambda_term → "(" _ lambda_arguments _ lambda_term$ebnf$1 ")" _ "=>" _ ● term
    cterm →  ● lambda_term
    term →  ● cterm
    variable_declaration → identifier_token _ "=" _ ● term
    declaration →  ● variable_declaration
    let_declarations_tail → _ ";" _ ● declaration
    let_declarations$ebnf$1 → let_declarations$ebnf$1 ● let_declarations_tail
    let_declarations → declaration ● let_declarations$ebnf$1
    let_term → "let" _ ● let_declarations _ let_term$ebnf$1 "in" _ term
    cterm →  ● let_term
    term →  ● cterm
    file → _ ● term _
    main →  ● file
A "}" based on:
    block_statement → "{" _ block_statement$ebnf$1 _ block_statement$ebnf$2 ● "}"
    do_term → "do" _ ● block_statement
    cterm →  ● do_term
    term →  ● cterm
    lambda_term → "(" _ lambda_arguments _ lambda_term$ebnf$1 ")" _ "=>" _ ● term
    cterm →  ● lambda_term
    term →  ● cterm
    variable_declaration → identifier_token _ "=" _ ● term
    declaration →  ● variable_declaration
    let_declarations_tail → _ ";" _ ● declaration
    let_declarations$ebnf$1 → let_declarations$ebnf$1 ● let_declarations_tail
    let_declarations → declaration ● let_declarations$ebnf$1
    let_term → "let" _ ● let_declarations _ let_term$ebnf$1 "in" _ term
    cterm →  ● let_term
    term →  ● cterm
    file → _ ● term _
    main →  ● file
A ";" based on:
    block_statement$ebnf$2$subexpression$1 →  ● ";" _
    block_statement$ebnf$2 → block_statement$ebnf$2 ● block_statement$ebnf$2$subexpression$1
    block_statement → "{" _ block_statement$ebnf$1 _ ● block_statement$ebnf$2 "}"
    do_term → "do" _ ● block_statement
    cterm →  ● do_term
    term →  ● cterm
    lambda_term → "(" _ lambda_arguments _ lambda_term$ebnf$1 ")" _ "=>" _ ● term
    cterm →  ● lambda_term
    term →  ● cterm
    variable_declaration → identifier_token _ "=" _ ● term
    declaration →  ● variable_declaration
    let_declarations_tail → _ ";" _ ● declaration
    let_declarations$ebnf$1 → let_declarations$ebnf$1 ● let_declarations_tail
    let_declarations → declaration ● let_declarations$ebnf$1
    let_term → "let" _ ● let_declarations _ let_term$ebnf$1 "in" _ term
    cterm →  ● let_term
    term →  ● cterm
    file → _ ● term _
    main →  ● file
],
  ],
  "term": null,
  "warnings": Array [],
}
`;

exports[`Parser Golden Test Suite Parse example "lambda1": lambda1 1`] = `
Object {
  "term": Object {
    "ann": Object {
      "span": Object {
        "column": Object {
          "end": 9,
          "start": 1,
        },
        "line": Object {
          "end": 1,
          "start": 1,
        },
        "type": "Span",
      },
    },
    "args": Array [
      "x",
    ],
    "body": Object {
      "ann": Object {
        "span": Object {
          "column": Object {
            "end": 9,
            "start": 8,
          },
          "line": Object {
            "end": 1,
            "start": 1,
          },
          "type": "Span",
        },
      },
      "tag": "VariableTerm",
      "variable": "x",
    },
    "tag": "LambdaTerm",
  },
  "warnings": Array [],
}
`;

exports[`Parser Golden Test Suite Parse example "let1": let1 1`] = `
Object {
  "term": Object {
    "ann": Object {
      "span": Object {
        "column": Object {
          "end": 15,
          "start": 1,
        },
        "line": Object {
          "end": 1,
          "start": 1,
        },
        "type": "Span",
      },
    },
    "body": Object {
      "ann": Object {
        "span": Object {
          "column": Object {
            "end": 15,
            "start": 14,
          },
          "line": Object {
            "end": 1,
            "start": 1,
          },
          "type": "Span",
        },
      },
      "tag": "VariableTerm",
      "variable": "x",
    },
    "declarations": Array [
      Object {
        "ann": Object {
          "span": Object {
            "column": Object {
              "end": 10,
              "start": 5,
            },
            "line": Object {
              "end": 1,
              "start": 1,
            },
            "type": "Span",
          },
        },
        "body": Object {
          "ann": Object {
            "span": Object {
              "column": Object {
                "end": 10,
                "start": 9,
              },
              "line": Object {
                "end": 1,
                "start": 1,
              },
              "type": "Span",
            },
          },
          "tag": "ValueTerm",
          "value": Object {
            "ann": Object {
              "span": Object {
                "column": Object {
                  "end": 10,
                  "start": 9,
                },
                "line": Object {
                  "end": 1,
                  "start": 1,
                },
                "type": "Span",
              },
            },
            "num": 1,
            "tag": "NumberValue",
          },
        },
        "tag": "VariableDeclaration",
        "variable": "x",
      },
    ],
    "tag": "LetTerm",
  },
  "warnings": Array [],
}
`;

exports[`Parser Golden Test Suite Parse example "let2": let2 1`] = `
Object {
  "term": Object {
    "ann": Object {
      "span": Object {
        "column": Object {
          "end": 16,
          "start": 1,
        },
        "line": Object {
          "end": 1,
          "start": 1,
        },
        "type": "Span",
      },
    },
    "body": Object {
      "ann": Object {
        "span": Object {
          "column": Object {
            "end": 16,
            "start": 15,
          },
          "line": Object {
            "end": 1,
            "start": 1,
          },
          "type": "Span",
        },
      },
      "tag": "VariableTerm",
      "variable": "x",
    },
    "declarations": Array [
      Object {
        "ann": Object {
          "span": Object {
            "column": Object {
              "end": 10,
              "start": 5,
            },
            "line": Object {
              "end": 1,
              "start": 1,
            },
            "type": "Span",
          },
        },
        "body": Object {
          "ann": Object {
            "span": Object {
              "column": Object {
                "end": 10,
                "start": 9,
              },
              "line": Object {
                "end": 1,
                "start": 1,
              },
              "type": "Span",
            },
          },
          "tag": "ValueTerm",
          "value": Object {
            "ann": Object {
              "span": Object {
                "column": Object {
                  "end": 10,
                  "start": 9,
                },
                "line": Object {
                  "end": 1,
                  "start": 1,
                },
                "type": "Span",
              },
            },
            "num": 1,
            "tag": "NumberValue",
          },
        },
        "tag": "VariableDeclaration",
        "variable": "x",
      },
    ],
    "tag": "LetTerm",
  },
  "warnings": Array [],
}
`;

exports[`Parser Golden Test Suite Parse example "let3": let3 1`] = `
Object {
  "term": Object {
    "ann": Object {
      "span": Object {
        "column": Object {
          "end": 28,
          "start": 1,
        },
        "line": Object {
          "end": 1,
          "start": 1,
        },
        "type": "Span",
      },
    },
    "body": Object {
      "ann": Object {
        "span": Object {
          "column": Object {
            "end": 28,
            "start": 22,
          },
          "line": Object {
            "end": 1,
            "start": 1,
          },
          "type": "Span",
        },
      },
      "elements": Array [
        Object {
          "ann": Object {
            "span": Object {
              "column": Object {
                "end": 24,
                "start": 23,
              },
              "line": Object {
                "end": 1,
                "start": 1,
              },
              "type": "Span",
            },
          },
          "tag": "VariableTerm",
          "variable": "x",
        },
        Object {
          "ann": Object {
            "span": Object {
              "column": Object {
                "end": 27,
                "start": 26,
              },
              "line": Object {
                "end": 1,
                "start": 1,
              },
              "type": "Span",
            },
          },
          "tag": "VariableTerm",
          "variable": "y",
        },
      ],
      "tag": "ArrayTerm",
    },
    "declarations": Array [
      Object {
        "ann": Object {
          "span": Object {
            "column": Object {
              "end": 10,
              "start": 5,
            },
            "line": Object {
              "end": 1,
              "start": 1,
            },
            "type": "Span",
          },
        },
        "body": Object {
          "ann": Object {
            "span": Object {
              "column": Object {
                "end": 10,
                "start": 9,
              },
              "line": Object {
                "end": 1,
                "start": 1,
              },
              "type": "Span",
            },
          },
          "tag": "ValueTerm",
          "value": Object {
            "ann": Object {
              "span": Object {
                "column": Object {
                  "end": 10,
                  "start": 9,
                },
                "line": Object {
                  "end": 1,
                  "start": 1,
                },
                "type": "Span",
              },
            },
            "num": 1,
            "tag": "NumberValue",
          },
        },
        "tag": "VariableDeclaration",
        "variable": "x",
      },
      Object {
        "ann": Object {
          "span": Object {
            "column": Object {
              "end": 17,
              "start": 12,
            },
            "line": Object {
              "end": 1,
              "start": 1,
            },
            "type": "Span",
          },
        },
        "body": Object {
          "ann": Object {
            "span": Object {
              "column": Object {
                "end": 17,
                "start": 16,
              },
              "line": Object {
                "end": 1,
                "start": 1,
              },
              "type": "Span",
            },
          },
          "tag": "ValueTerm",
          "value": Object {
            "ann": Object {
              "span": Object {
                "column": Object {
                  "end": 17,
                  "start": 16,
                },
                "line": Object {
                  "end": 1,
                  "start": 1,
                },
                "type": "Span",
              },
            },
            "num": 2,
            "tag": "NumberValue",
          },
        },
        "tag": "VariableDeclaration",
        "variable": "y",
      },
    ],
    "tag": "LetTerm",
  },
  "warnings": Array [],
}
`;

exports[`Parser Golden Test Suite Parse example "null1": null1 1`] = `
Object {
  "errors": Array [
    [Error: No parse results were recovered.],
  ],
  "term": null,
  "warnings": Array [],
}
`;

exports[`Parser Golden Test Suite Parse example "null2": null2 1`] = `
Object {
  "term": Object {
    "ann": Object {
      "span": Object {
        "column": Object {
          "end": 5,
          "start": 1,
        },
        "line": Object {
          "end": 1,
          "start": 1,
        },
        "type": "Span",
      },
    },
    "tag": "ValueTerm",
    "value": Object {
      "ann": Object {
        "span": Object {
          "column": Object {
            "end": 5,
            "start": 1,
          },
          "line": Object {
            "end": 1,
            "start": 1,
          },
          "type": "Span",
        },
      },
      "tag": "NullValue",
    },
  },
  "warnings": Array [
    [Error: Ambiguous grammar encountered! Resolving first result.],
  ],
}
`;

exports[`Parser Golden Test Suite Parse example "number1": number1 1`] = `
Object {
  "term": Object {
    "ann": Object {
      "span": Object {
        "column": Object {
          "end": 2,
          "start": 1,
        },
        "line": Object {
          "end": 1,
          "start": 1,
        },
        "type": "Span",
      },
    },
    "tag": "ValueTerm",
    "value": Object {
      "ann": Object {
        "span": Object {
          "column": Object {
            "end": 2,
            "start": 1,
          },
          "line": Object {
            "end": 1,
            "start": 1,
          },
          "type": "Span",
        },
      },
      "num": 0,
      "tag": "NumberValue",
    },
  },
  "warnings": Array [],
}
`;

exports[`Parser Golden Test Suite Parse example "number2": number2 1`] = `
Object {
  "term": Object {
    "ann": Object {
      "span": Object {
        "column": Object {
          "end": 11,
          "start": 1,
        },
        "line": Object {
          "end": 1,
          "start": 1,
        },
        "type": "Span",
      },
    },
    "tag": "ValueTerm",
    "value": Object {
      "ann": Object {
        "span": Object {
          "column": Object {
            "end": 11,
            "start": 1,
          },
          "line": Object {
            "end": 1,
            "start": 1,
          },
          "type": "Span",
        },
      },
      "num": 1234567890,
      "tag": "NumberValue",
    },
  },
  "warnings": Array [],
}
`;

exports[`Parser Golden Test Suite Parse example "number3": number3 1`] = `
Object {
  "term": Object {
    "ann": Object {
      "span": Object {
        "column": Object {
          "end": 22,
          "start": 1,
        },
        "line": Object {
          "end": 1,
          "start": 1,
        },
        "type": "Span",
      },
    },
    "tag": "ValueTerm",
    "value": Object {
      "ann": Object {
        "span": Object {
          "column": Object {
            "end": 22,
            "start": 1,
          },
          "line": Object {
            "end": 1,
            "start": 1,
          },
          "type": "Span",
        },
      },
      "num": 1234567890.0123458,
      "tag": "NumberValue",
    },
  },
  "warnings": Array [],
}
`;

exports[`Parser Golden Test Suite Parse example "string1": string1 1`] = `
Object {
  "term": Object {
    "ann": Object {
      "span": Object {
        "column": Object {
          "end": 3,
          "start": 1,
        },
        "line": Object {
          "end": 1,
          "start": 1,
        },
        "type": "Span",
      },
    },
    "tag": "ValueTerm",
    "value": Object {
      "ann": Object {
        "span": Object {
          "column": Object {
            "end": 3,
            "start": 1,
          },
          "line": Object {
            "end": 1,
            "start": 1,
          },
          "type": "Span",
        },
      },
      "str": "",
      "tag": "StringValue",
    },
  },
  "warnings": Array [],
}
`;

exports[`Parser Golden Test Suite Parse example "string2": string2 1`] = `
Object {
  "term": Object {
    "ann": Object {
      "span": Object {
        "column": Object {
          "end": 3,
          "start": 1,
        },
        "line": Object {
          "end": 1,
          "start": 1,
        },
        "type": "Span",
      },
    },
    "tag": "ValueTerm",
    "value": Object {
      "ann": Object {
        "span": Object {
          "column": Object {
            "end": 3,
            "start": 1,
          },
          "line": Object {
            "end": 1,
            "start": 1,
          },
          "type": "Span",
        },
      },
      "str": "",
      "tag": "StringValue",
    },
  },
  "warnings": Array [],
}
`;

exports[`Parser Golden Test Suite Parse example "string3": string3 1`] = `
Object {
  "term": Object {
    "ann": Object {
      "span": Object {
        "column": Object {
          "end": 15,
          "start": 1,
        },
        "line": Object {
          "end": 1,
          "start": 1,
        },
        "type": "Span",
      },
    },
    "tag": "ValueTerm",
    "value": Object {
      "ann": Object {
        "span": Object {
          "column": Object {
            "end": 15,
            "start": 1,
          },
          "line": Object {
            "end": 1,
            "start": 1,
          },
          "type": "Span",
        },
      },
      "str": "Hello world!",
      "tag": "StringValue",
    },
  },
  "warnings": Array [],
}
`;

exports[`Parser Golden Test Suite Parse example "string4": string4 1`] = `
Object {
  "term": Object {
    "ann": Object {
      "span": Object {
        "column": Object {
          "end": 15,
          "start": 1,
        },
        "line": Object {
          "end": 1,
          "start": 1,
        },
        "type": "Span",
      },
    },
    "tag": "ValueTerm",
    "value": Object {
      "ann": Object {
        "span": Object {
          "column": Object {
            "end": 15,
            "start": 1,
          },
          "line": Object {
            "end": 1,
            "start": 1,
          },
          "type": "Span",
        },
      },
      "str": "Hello World!",
      "tag": "StringValue",
    },
  },
  "warnings": Array [],
}
`;

exports[`Parser Golden Test Suite Parse example "string5": string5 1`] = `
Object {
  "term": Object {
    "ann": Object {
      "span": Object {
        "column": Object {
          "end": 47,
          "start": 1,
        },
        "line": Object {
          "end": 1,
          "start": 1,
        },
        "type": "Span",
      },
    },
    "tag": "ValueTerm",
    "value": Object {
      "ann": Object {
        "span": Object {
          "column": Object {
            "end": 47,
            "start": 1,
          },
          "line": Object {
            "end": 1,
            "start": 1,
          },
          "type": "Span",
        },
      },
      "str": "The quick brown fox jumps over the lazy dog.",
      "tag": "StringValue",
    },
  },
  "warnings": Array [],
}
`;

exports[`Parser Golden Test Suite Parse example "string6": string6 1`] = `
Object {
  "term": Object {
    "ann": Object {
      "span": Object {
        "column": Object {
          "end": 47,
          "start": 1,
        },
        "line": Object {
          "end": 1,
          "start": 1,
        },
        "type": "Span",
      },
    },
    "tag": "ValueTerm",
    "value": Object {
      "ann": Object {
        "span": Object {
          "column": Object {
            "end": 47,
            "start": 1,
          },
          "line": Object {
            "end": 1,
            "start": 1,
          },
          "type": "Span",
        },
      },
      "str": "The quick brown fox jumps over the lazy dog.",
      "tag": "StringValue",
    },
  },
  "warnings": Array [],
}
`;
